--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,10 +25,9 @@ const blog = (await getCollection('blog'))
     <section>
       <Card>
         <CardHeader>
-          <CardTitle className="text-3xl">er·u·dite</CardTitle>
+          <CardTitle className="text-3xl">Hello world</CardTitle>
           <CardDescription
-            >/ˈer(y)əˌdīt/ &bull; <span class="font-semibold">adjective</span
-            ></CardDescription
+            >I worke! <span class="font-semibold">hehehe</span></CardDescription
           >
         </CardHeader>
         <CardContent>
