--- a/src/components/PostNavigation.astro
+++ b/src/components/PostNavigation.astro
@@ -1,6 +1,5 @@
 ---
 import Link from '@/components/Link.astro'
-import { buttonVariants } from '@/components/ui/button'
 import { cn } from '@/lib/utils'
 import { Icon } from 'astro-icon/components'
 
@@ -11,8 +10,7 @@ const { prevPost, nextPost } = Astro.props
   <Link
     href={prevPost ? `/blog/${prevPost.slug}` : '#'}
     class={cn(
-      buttonVariants({ variant: 'outline' }),
-      'rounded-xl group flex items-center justify-start w-full sm:w-1/2 h-fit',
+      'btn btn-outline rounded-xl group flex items-center justify-start w-full sm:w-1/2 h-fit',
       !prevPost && 'pointer-events-none opacity-50 cursor-not-allowed',
     )}
     aria-disabled={!prevPost}
@@ -33,8 +31,7 @@ const { prevPost, nextPost } = Astro.props
   <Link
     href={nextPost ? `/blog/${nextPost.slug}` : '#'}
     class={cn(
-      buttonVariants({ variant: 'outline' }),
-      'rounded-xl group flex items-center justify-end w-full sm:w-1/2 h-fit',
+      'btn btn-outline rounded-xl group flex items-center justify-end w-full sm:w-1/2 h-fit',
       !nextPost && 'pointer-events-none opacity-50 cursor-not-allowed',
     )}
     aria-disabled={!nextPost}
