--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -1,6 +1,5 @@
 ---
 import Link from '@/components/Link.astro'
-import { buttonVariants } from '@/components/ui/button'
 import type { Link as SocialLink } from '@/consts'
 import { cn } from '@/lib/utils'
 import { Icon } from 'astro-icon/components'
@@ -39,7 +38,7 @@ const getSocialLink = ({ href, label }: SocialLink) => ({
             href={href}
             aria-label={ariaLabel}
             title={ariaLabel}
-            class={buttonVariants({ variant: 'outline', size: 'icon' })}
+            class="btn btn-outline btn-sm flex items-center justify-center"
             external
           >
             <Icon name={iconName} class="size-4" />
