--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,8 +21,15 @@ const { title, description, image } = Astro.props
       description={description}
       image={image}
     />
+
+    <script>
+      const theme = localStorage.getItem('theme')
+      if (theme === 'dark') {
+        document.documentElement.classList.add('dark')
+      }
+    </script>
   </head>
-  <body>
+  <body class="bg-background text-foreground">
     <div
       class="box-border flex h-fit min-h-screen flex-col gap-y-6 font-sans antialiased"
     >
