--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -2,7 +2,6 @@
 import Breadcrumbs from '@/components/Breadcrumbs.astro'
 import Container from '@/components/Container.astro'
 import Link from '@/components/Link.astro'
-import { badgeVariants } from '@/components/ui/badge'
 import Layout from '@/layouts/Layout.astro'
 import { Icon } from 'astro-icon/components'
 import { getCollection } from 'astro:content'
@@ -23,10 +22,7 @@ const tags = blog
       <div class="flex flex-wrap gap-2">
         {
           tags.map((tag) => (
-            <Link
-              href={`/tags/${tag}`}
-              class={badgeVariants({ variant: 'secondary' })}
-            >
+            <Link href={`/tags/${tag}`} class="badge badge-secondary">
               <Icon name="lucide:hash" class="size-3 -translate-x-0.5" />
               {tag}
             </Link>
