--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,8 +2,7 @@
 import Container from '@/components/Container.astro'
 import Link from '@/components/Link.astro'
 import { NAV_LINKS, SITE } from '@/consts'
-import { Image } from 'astro:assets'
-import logo from '../../public/static/logo.svg'
+import Logo from './Logo.astro'
 import { ThemeSwitcher } from './ui-new/ThemeSwitcher'
 ---
 
@@ -17,8 +16,10 @@ import { ThemeSwitcher } from './ui-new/ThemeSwitcher'
         href="/"
         class="flex flex-shrink-0 items-center gap-2 text-xl font-semibold transition-colors duration-300 hover:text-primary"
       >
-        <Image src={logo} alt="Logo" class="size-8" />
-        {SITE.TITLE}
+        <Logo />
+        <span class="font-bold text-gray-600 dark:text-gray-200">
+          {SITE.TITLE}
+        </span>
       </Link>
       <div class="flex items-center gap-2 md:gap-4">
         <nav class="hidden items-center gap-4 text-sm sm:gap-6 md:flex">
