--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,14 +3,16 @@ import Footer from '@/components/Footer.astro'
 import Head from '@/components/Head.astro'
 import Header from '@/components/Header.astro'
 import { SITE } from '@/consts'
+import { cn } from '@/lib/utils'
 
 type Props = {
   title: string
   description: string
   image?: string
+  class?: string
 }
 
-const { title, description, image } = Astro.props
+const { title, description, image, class: className } = Astro.props
 ---
 
 <!doctype html>
@@ -21,20 +23,13 @@ const { title, description, image } = Astro.props
       description={description}
       image={image}
     />
-
-    <script>
-      const theme = localStorage.getItem('theme')
-      if (theme === 'dark') {
-        document.documentElement.classList.add('dark')
-      }
-    </script>
   </head>
   <body class="bg-background text-foreground">
     <div
       class="box-border flex h-fit min-h-screen flex-col gap-y-6 font-sans antialiased"
     >
       <Header />
-      <main class="flex-grow">
+      <main class={cn('flex-grow', className)}>
         <slot />
       </main>
       <Footer />
