--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -21,7 +21,7 @@ const { items } = Astro.props
       >
     </li>
     {
-      items.map((item, index) => {
+      items.map((item) => {
         return (
           <li>
             <BreadcrumbItemContent item={item}>
