--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -47,7 +47,7 @@ const { title, description, image = '/static/twitter-card.png' } = Astro.props
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
-<ViewTransitions />
+<ViewTransitions transition:name="fade" />
 
 <script is:inline>
   function setDarkMode(document) {
