--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -91,10 +91,10 @@ const { Content, headings } = await post.render()
           {
             post.data.tags && post.data.tags.length > 0 ? (
               post.data.tags.map((tag) => (
-                <a href={`/tags/${tag}`} class="badge badge-secondary">
+                <div class="badge badge-secondary">
                   <Icon name="lucide:hash" class="size-3 -translate-x-0.5" />
                   {tag}
-                </a>
+                </div>
               ))
             ) : (
               <span class="text-sm text-muted-foreground">
