--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,52 +19,9 @@
 }
 
 @layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 80.1%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 80.1%;
-    --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 80.1%;
-    --accent-foreground: 0 0% 9%;
-    --additive: 112 50% 36%;
-    --additive-foreground: 0 0% 9%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
-  }
-  .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
-    --additive: 112 50% 36%;
-    --additive-foreground: 0 0% 9%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
-  }
-
-  *,
-  *::before,
-  *::after {
-    @apply border-border;
-  }
-
   html {
     color-scheme: light;
-    @apply bg-background text-foreground;
+    @apply bg-base-100 text-base-content;
 
     &.dark {
       color-scheme: dark;
@@ -83,7 +40,7 @@
 
 @layer components {
   article {
-    @apply prose-headings:scroll-mt-20 prose-headings:break-words prose-p:break-words prose-a:!decoration-muted-foreground prose-a:underline-offset-[3px] prose-a:transition-colors hover:prose-a:!decoration-foreground prose-pre:!px-0 prose-img:mx-auto;
+    @apply prose-headings:scroll-mt-20 prose-headings:break-words prose-p:break-words prose-a:!text-neutral prose-a:underline-offset-[3px] prose-a:transition-colors hover:prose-a:!decoration-base-content prose-pre:!px-0 prose-img:mx-auto;
 
     .katex-display {
       @apply overflow-x-auto overflow-y-hidden py-4;
@@ -107,7 +64,7 @@
 
     /* Inline code */
     :not(pre) > code {
-      @apply relative rounded bg-muted/50 px-[0.3rem] py-[0.2rem] font-mono text-sm font-medium;
+      @apply relative rounded bg-neutral/50 px-[0.3rem] py-[0.2rem] font-mono text-sm font-medium;
     }
 
     /* Code blocks */
@@ -116,7 +73,7 @@
 
       /* Code block titles */
       [data-rehype-pretty-code-title] {
-        @apply break-words rounded-t-xl border-x border-t px-4 py-2 text-sm font-medium text-foreground;
+        @apply break-words rounded-t-xl border-x border-t bg-base-content px-4 py-2 text-sm font-medium;
 
         /* Remove top margin from code block if a title is present */
         & + pre {
@@ -138,7 +95,7 @@
             > [data-line]::before {
               counter-increment: line;
               content: counter(line);
-              @apply mr-4 inline-block w-4 text-right text-muted-foreground;
+              @apply mr-4 inline-block w-4 text-right text-neutral;
             }
           }
 
@@ -149,27 +106,27 @@
 
           /* Highlighted lines */
           [data-highlighted-line] {
-            @apply bg-foreground/10;
+            @apply bg-base-content/10;
           }
 
           /* Highlighted characters */
           [data-highlighted-chars] > span {
-            @apply bg-muted-foreground/40 py-[7px];
+            @apply bg-neutral/40  py-[7px];
           }
 
           /* Diff lines */
           .diff {
             &.add {
-              @apply bg-additive/15;
+              @apply bg-success/15;
             }
             &.remove {
-              @apply bg-destructive/15;
+              @apply bg-error/15;
             }
           }
 
           /* Copy button */
           > button:has(> span) {
-            @apply right-0.5 top-[3px] m-0 size-8 rounded-md bg-background p-1 backdrop-blur-none transition-all;
+            @apply right-0.5 top-[3px] m-0 size-8 rounded-md bg-base-100 p-1 backdrop-blur-none transition-all;
           }
         }
       }
