--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@ import { ThemeSwitcher } from './ui-new/ThemeSwitcher'
 ---
 
 <header
-  class="sticky top-0 z-10 bg-background/50 backdrop-blur-md dark:bg-none"
+  class="sticky top-0 z-10 bg-base-100/50 backdrop-blur-md dark:bg-none"
   transition:persist
 >
   <Container>
@@ -27,7 +27,7 @@ import { ThemeSwitcher } from './ui-new/ThemeSwitcher'
             NAV_LINKS.map((item) => (
               <Link
                 href={item.href}
-                class="capitalize text-foreground/60 transition-colors hover:text-foreground/80"
+                class="capitalize text-base-content/60 transition-colors hover:text-base-content/80"
               >
                 {item.label}
               </Link>
