--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title, description, image, class: className } = Astro.props
       image={image}
     />
   </head>
-  <body class="bg-background text-foreground">
+  <body>
     <div
       class="box-border flex h-fit min-h-screen flex-col gap-y-6 font-sans antialiased"
     >
