--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -3,6 +3,7 @@ import Breadcrumbs from '@/components/Breadcrumbs.astro'
 import Container from '@/components/Container.astro'
 import PostNavigation from '@/components/PostNavigation.astro'
 import TableOfContents from '@/components/TableOfContents.astro'
+import { PreBlock } from '@/components/ui-new/PreBlock'
 import Layout from '@/layouts/Layout.astro'
 import { formatDate, readingTime } from '@/lib/utils'
 import { Icon } from 'astro-icon/components'
@@ -111,7 +112,11 @@ const { Content, headings } = await post.render()
     {headings.length > 0 && <TableOfContents headings={headings} />}
 
     <article class="prose prose-neutral max-w-none dark:prose-invert">
-      <Content />
+      <Content
+        components={{
+          pre: PreBlock,
+        }}
+      />
     </article>
 
     <PostNavigation prevPost={prevPost} nextPost={nextPost} />
