--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -83,7 +83,7 @@
 
       /* Code block styles */
       pre {
-        @apply static max-h-[600px] overflow-auto rounded-xl border bg-secondary/20 py-4 text-sm leading-loose;
+        @apply static max-h-[600px] overflow-auto rounded-xl border border-primary/20 bg-secondary/5 py-4 text-sm leading-loose;
 
         /* Code block content */
         > code {
