Add global fuse.js search

--- a/src/components/IndexHeader.astro
+++ b/src/components/IndexHeader.astro
@@ -26,7 +26,7 @@ import Flower from './flower.svg?raw'
               ></path>
             </svg></span
           >, drop based thoughts on life, and sometimes try to make educative
-          content. Hope you will rest well.
+          content. Hope you will rest well 😼
         </p>
       </div>
       <div class="h-full min-w-[240px]">
