--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,16 @@
 ---
 import Container from '@/components/Container.astro'
 import Link from '@/components/Link.astro'
-import { NAV_LINKS, SITE } from '@/consts'
-import Logo from './Logo.astro'
+import { NAV_LINKS } from '@/consts'
+import { GlobalSearchTrigger } from './global-search/GlobalSearchTrigger'
+import type { GlobalSearchRecord } from './global-search/types'
 import { ThemeSwitcher } from './ui-new/ThemeSwitcher'
+
+interface Props {
+  records: GlobalSearchRecord[]
+}
+
+const { records } = Astro.props
 ---
 
 <header
@@ -12,15 +19,12 @@ import { ThemeSwitcher } from './ui-new/ThemeSwitcher'
 >
   <Container>
     <div class="flex flex-wrap items-center justify-between gap-4 py-4">
-      <Link
-        href="/"
-        class="flex flex-shrink-0 items-center gap-2 text-xl font-semibold transition-colors duration-300 hover:text-primary"
-      >
-        <Logo />
+      <!-- <Logo />
         <span class="font-bold text-gray-600 dark:text-gray-200">
           {SITE.TITLE}
-        </span>
-      </Link>
+        </span> -->
+
+      <GlobalSearchTrigger records={records} client:load />
       <div class="flex items-center gap-2 md:gap-4">
         <nav class="hidden items-center gap-4 text-sm sm:gap-6 md:flex">
           {
