--- a/src/pages/test/index.astro
+++ b/src/pages/test/index.astro
@@ -1,10 +1,11 @@
 ---
-import { GlobalSearch } from '@/components/ui-new/GlobalSearch'
+import Layout from '@/layouts/Layout.astro'
 ---
 
-<h1>Search</h1>
+<Layout title="" description="">
+  <h1>Search</h1>
+</Layout>
 
-<GlobalSearch client:load />
 <script is:inline></script>
 
 <style is:global></style>
